re PR rtl-optimization/10955 ([SPARC] wrong code at -O3 for structure argument in context of structure return)

PR optimization/10955
	* unroll.c (unroll_loop): Fix off-by-one bug.

From-SVN: r67870